# chronique

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/commands/: entry.rs  entry_tag.rs  mod.rs  settings.rs  tag.rs
src/components/: ContentPane.tsx  EntryItem.tsx  Settings.tsx  SidePane.tsx  TagItem.tsx  TagManager.tsx
